# unit_test_example

./: .gitignore  AllTests.cpp  CMakeLists copy.txt  CMakeLists.txt  Makefile  README.md  asd_bbd  example.c  example_test.cpp  main.c
cmake/: functions.cmake  utest.cmake
cmake_test/: CMakeLists.txt
file_holder/: example.h
file_holder/api/num2/: returnnum2.c
file_holder/api/num3/: returnnum3.h
main/: CMakeLists.txt  main.c
mocks/: CMakeLists.txt
mocks/int1/: returnint1_mock.cpp
mocks/int2/: returnint2_mock.cpp
src/: CMakeLists.txt  main.c
src/api/: CMakeLists.txt
src/api/num1/: CMakeLists.txt  returnnum1.c  returnnum1.h
src/api/num2/: CMakeLists.txt  returnnum2.h
src/api/num3/: CMakeLists.txt  returnnum3.c
src/drv/: CMakeLists.txt
src/drv/int1/: CMakeLists.txt  returnint1.c  returnint1.h
src/drv/int2/: CMakeLists.txt  returnint2.c  returnint2.h
src/drv/int3/: CMakeLists.txt  returnint3.c  returnint3.h
tests/: CMakeLists copy.txt  CMakeLists.txt  intreturn1_test.cpp  intreturn2_test.cpp  numreturn1_test.cpp  numreturn2_test.cpp  numreturn3_test.cpp  returnint1_test.cpp
tests/Mocks/int3/: returnint3_mock.cpp
tests/drv/int1/: returnint1_test.cpp
tests/drv/int2/: returnint2_test.cpp
tests/drv/int3/: returnint3_test.cpp
